--- a/src/view/mainView.fxml
+++ b/src/view/mainView.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600" minWidth="800" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600" minWidth="800" prefHeight="639.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -38,24 +38,26 @@
                   <Canvas fx:id="clickedColor" height="20.0" width="20.0" />
                </children>
             </HBox>
-            <VBox prefHeight="171.0" prefWidth="100.0">
+            <VBox prefHeight="218.0" prefWidth="100.0">
                <children>
+                  <Label text="LAB 1" />
                   <Label text="xSize" />
                   <TextField fx:id="xSizeView" />
                   <Label text="ySize" />
                   <TextField fx:id="ySizeView" />
                   <Label text="Amount of seed:" />
                   <TextField fx:id="seedAmount" />
+                  <Button mnemonicParsing="false" onAction="#clearBoard" text="Clear Board">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
                   <Button mnemonicParsing="false" onAction="#generateBoard" prefWidth="99.0" text="Generate Board" />
                </children>
             </VBox>
-            <Button mnemonicParsing="false" onAction="#clearBoard" text="Clear Board">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
-            <VBox prefHeight="200.0" prefWidth="100.0">
+            <VBox prefHeight="140.0" prefWidth="100.0">
                <children>
+                  <Label text="LAB 2" />
                   <Label text="Amount of inclusions:" />
                   <TextField fx:id="inclusionAmount" />
                   <Label text="Size of Inclusions:" />
@@ -65,6 +67,13 @@
                </children></VBox>
             <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
+                  <Label text="LAB 4" />
+                  <Button mnemonicParsing="false" onAction="#clearSeedWithoutPhase" text="Clear not phase" />
+               </children>
+            </VBox>
+            <VBox prefHeight="113.0" prefWidth="100.0">
+               <children>
+                  <Label text="LAB 5" />
                   <Label text="Simulation steps" />
                   <TextField fx:id="simulationStepNumber" />
                   <Button mnemonicParsing="false" onAction="#drawBoundary" text="Boundary" />
