--- a/src/view/mainView.fxml
+++ b/src/view/mainView.fxml
@@ -30,17 +30,17 @@
       <Canvas fx:id="canvas" height="415.0" onMouseClicked="#mouseClicked" width="436.0" BorderPane.alignment="CENTER" />
    </center>
    <left>
-      <VBox fillWidth="false" nodeOrientation="LEFT_TO_RIGHT" prefHeight="375.0" prefWidth="108.0" BorderPane.alignment="CENTER">
+      <VBox fillWidth="false" nodeOrientation="LEFT_TO_RIGHT" prefHeight="614.0" prefWidth="126.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox prefHeight="218.0" prefWidth="100.0">
+            <VBox prefHeight="218.0" prefWidth="122.0">
                <children>
                   <Label text="LAB 1" />
                   <Label text="xSize" />
-                  <TextField fx:id="xSizeView" />
+                  <TextField onKeyPressed="#xSizeListener" fx:id="xSizeView" />
                   <Label text="ySize" />
-                  <TextField fx:id="ySizeView" />
-                  <Label text="Amount of seed:" />
-                  <TextField fx:id="seedAmount" />
+                  <TextField fx:id="ySizeView" onKeyPressed="#ySizeListener" />
+                  <Label text="Amount of nucleons:" />
+                  <TextField fx:id="nucleonsAmountView" onKeyPressed="#nucleonAmountListener" />
                   <Button mnemonicParsing="false" onAction="#clearBoard" text="Clear Board">
                      <font>
                         <Font size="14.0" />
@@ -49,13 +49,13 @@
                   <Button mnemonicParsing="false" onAction="#generateBoard" prefWidth="99.0" text="Generate Board" />
                </children>
             </VBox>
-            <VBox prefHeight="140.0" prefWidth="100.0">
+            <VBox prefHeight="151.0" prefWidth="126.0">
                <children>
                   <Label text="LAB 2" />
                   <Label text="Amount of inclusions:" />
-                  <TextField fx:id="inclusionAmount" />
+                  <TextField fx:id="inclusionsAmountView" onKeyPressed="#inclusionAmountListener" />
                   <Label text="Size of Inclusions:" />
-                  <TextField fx:id="inclusionSize" />
+                  <TextField fx:id="inclusionSizeView" onKeyPressed="#inclusionSizeListener" />
                   <ChoiceBox fx:id="inclusionType" prefWidth="150.0" />
                   <Button mnemonicParsing="false" onAction="#addInclusions" text="Add inclusions" />
                </children></VBox>
