--- a/src/view/mainView.fxml
+++ b/src/view/mainView.fxml
@@ -56,7 +56,7 @@
                   <TextField fx:id="inclusionsAmountView" onKeyPressed="#inclusionAmountListener" />
                   <Label text="Size of Inclusions:" />
                   <TextField fx:id="inclusionSizeView" onKeyPressed="#inclusionSizeListener" />
-                  <ChoiceBox fx:id="inclusionType" prefWidth="150.0" />
+                  <ChoiceBox fx:id="inclusionTypeView" onMouseReleased="#inclusionTypeListener" prefWidth="150.0" />
                   <Button mnemonicParsing="false" onAction="#addInclusions" text="Add inclusions" />
                </children></VBox>
             <VBox prefHeight="80.0" prefWidth="100.0">
